# salmagundi

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
c-version/SalmagundiC/: main.cpp
c-version/SalmagundiC/SalmagundiC.xcodeproj/: project.pbxproj
c-version/SalmagundiC/SalmagundiC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples-Rust/: hashbang-test.rs
src/: main.rs  rust.rs
