[package]
name = "salmagundi"
version = "0.1.0"
authors = ["Alexander Ronald Altman <alexanderaltman@me.com>"]
edition = "2018"

[dependencies.clang]
version = "0.20.0"
features = ["clang_6_0"]

[dependencies.enumset]
version = "0.3.11"

[dependencies.quote]
version = "0.6.8"
default-features = false

[dependencies.rand]
version = "0.5.5"

[dependencies.rayon]
version = "1.0.2"

[dependencies.structopt]
version = "0.2.10"

[dependencies.syn]
version = "0.15.4"
default-features = false
features = ["full", "parsing", "printing", "clone-impls", "extra-traits", "visit", "visit-mut", "fold"]
