[package]
name = "salmagundi"
version = "0.1.0"
authors = ["Alexander Ronald Altman <alexanderaltman@me.com>"]
edition = "2018"

[build-dependencies.pkg-config]
version = "0.3.14"
optional = true

[dependencies.either]
version = "1.5.0"

[dependencies.quote]
version = "0.6.8"
default-features = false
optional = true

[dependencies.rand]
version = "0.5.5"
features = ["i128_support"]

[dependencies.regex]
version = "1.0.5"

[dependencies.structopt]
version = "0.2.11"
features = ["suggestions", "color", "wrap_help"]

[dependencies.syn]
version = "0.15.9"
default-features = false
features = ["full", "parsing", "printing", "clone-impls", "extra-traits", "visit", "visit-mut", "fold"]
optional = true

[features]
default = ["rust-support"]
cfamily-support = ["pkg-config"]
rust-support = ["quote", "syn"]
